src/index.scss
/* ... */
.project-view {
  &__page-content {
    // position: relative;
    // align-items: center;
    min-height: 100vh;
    overflow-x: hidden;
  }

  &__page-content-inner {
    z-index: 100;
    display: flex;
    flex-direction: column;
    position: absolute;
    left: 0;
    right: 0;
    // align-items: center;
  }

  &__email-popup-content {
    margin-top: -80px;
    padding-top: 32px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  &__email-popup-inner {
    max-width: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  &__email-popup-title {
    font-size: 32px;
    margin-bottom: 8px;
  }

  &__email-popup-text {
    font-size: 20px;
    margin-bottom: 28px;
  }

  &__email-popup-input {
    margin-bottom: 12px;
    width: 100%;
  }

  &__unpublished-container {
    padding: 40px;

    p {
      margin-top: 0;
    }
  }
}

.editor-block {
  &__selection-item {
    display: flex;
  }

  &__selection-items {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  &__wrapper {
    // position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    // 280 = sidebar + paddings
    max-width: calc(100vw - 280px - 24px);
    background-color: $darkColor;
    padding: 12px;
    border-radius: 20px;

    &--small {
      background-color: $darkColor;
      padding: 0;
      border-radius: 0;
    }

    &--full {
      max-width: 100vw;
      width: 100vw;
      background-color: $darkColor;
      padding: 0;
      border-radius: 0;
    }
  }

  &__texts-wrapper {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    // addition of the paddings on wrapper elements
    padding: 32px calc(20px + 12px);
    max-width: 80%;

    &--small {
      padding: 4px;
    }

    &--full {
      margin: 64px 40px;
    }
  }

  &__cta-container {
    position: absolute;
    bottom: 160px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;

    &--full {
      bottom: 80px;
    }
  }

  &__title {
    font-size: 42px;
    margin-bottom: 32px;

    &--small {
      font-size: 12px;
      margin-bottom: 2px;
    }
  }

  &__subtitle {
    font-size: 22px;

    &--small {
      font-size: 7px;
    }
  }
}

.three-wrapper {
  &__scene {
    width: 100vw;
    height: calc(100vh - 24px - 40px);
    max-width: calc(100vw - 280px - 24px - 200px);
    border-radius: 20px;
    overflow: hidden;

    &--small {
      max-width: 200px;
      height: 100px;
      border-radius: 0px;
      cursor: pointer;

      .three-wrapper {
        &__canvas {
          background: $darkColor;
        }
      }

      &:hover {
        .three-wrapper {
          &__canvas {
            background: white;
          }
        }
      }
    }
  }

  &__canvas {
    background: $darkColor;
  }
}

.sidebar-editor {
  &__form-input-container {
    margin-bottom: 24px;
    width: 200px;
  }

  &__wrapper {
    display: flex;
    flex-direction: column;
  }
}

.listing {
  &__projects-container {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 32px;
  }

  &__card-container {
    margin: 0 12px 12px 0;
    display: flex;
    flex-direction: column;
  }
}

.fullpage-wrapper {
  padding: 20px 40px;
}

.homepage {
  &__btns-container {
    display: flex;
    align-items: center;
    justify-content: center;

    .p-button {
      margin: 0px 12px;
    }
  }
}

.card {
  &__wrapper {
    display: flex;
    padding: 12px 16px;
    border: solid 2px $lightColor;

    &--clickable {
      cursor: pointer;

      &:hover {
        border: solid 2px $accentColor;
      }
    }
  }
}

.custom-button {
  &__btn {
    color: $darkColor;
    cursor: pointer;
    border: none;
    font-size: 20px;
    padding: 16px 32px;
    background-image: linear-gradient(to bottom left, transparent 50%, $lightColor 50%), linear-gradient($lightColor, $lightColor), linear-gradient($lightColor, $lightColor);
    background-size: 25px 25px, 100% 100%, 100% 100%;
    background-position: 100% 0%, -25px 0%, 100% 25px;
    background-repeat: no-repeat;

    background-image: linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor), linear-gradient(to bottom left, transparent calc(30% - 1px), $darkColor calc(30% - 1px), $darkColor calc(30% + 1px), $lightColor calc(30% + 1px)), linear-gradient($lightColor, $lightColor), linear-gradient($lightColor, $lightColor);
    background-size: 2px 100%, 2px 100%, 100% 2px, 100% 2px, 25px 25px, 100% 100%, 100% 100%;
    background-position: 0% 0%, 100% 13px, -13px 0%, 0px 100%, 100% 0%, -25px 0%, 100% 25px;
  }

  &__btn:hover {
    color: $lightColor;
    background-image: linear-gradient(to bottom left, transparent 50%, $darkColor 50%), linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor);
    background-size: 25px 25px, 100% 100%, 100% 100%;
    background-position: 100% 0%, -25px 0%, 100% 25px;
    background-repeat: no-repeat;

    background-image: linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor), linear-gradient(to bottom left, transparent calc(30% - 1px), $darkColor calc(30% - 1px), $darkColor calc(30% + 1px), $darkColor calc(30% + 1px)), linear-gradient($darkColor, $darkColor), linear-gradient($darkColor, $darkColor);
    background-size: 2px 100%, 2px 100%, 100% 2px, 100% 2px, 25px 25px, 100% 100%, 100% 100%;
    background-position: 0% 0%, 100% 13px, -13px 0%, 0px 100%, 100% 0%, -25px 0%, 100% 25px;
  }
}

.logged-out {
  &__wrapper {
    background-color: $darkColor;
  }
}
/* ... */

